src/test/ui/parser/attr-bad-meta.stderr
error: expected one of `(`, `::`, `=`, `[`, `]`, or `{`, found `*`
  --> $DIR/attr-bad-meta.rs:3:7
   |
LL | #[path*] //~ ERROR expected one of `(`, `::`, `=`, `[`, `]`, or `{`, found `*`
   |       ^ expected one of `(`, `::`, `=`, `[`, `]`, or `{` here

error: aborting due to previous error

